--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href="/PortfolioSite/contactInfo.html">Contact info</a>
   <a href="/PortfolioSite/index.html">Home</a>
 
- <img style= "border-top-right-radius: 25px; border-top-left-radius: 25px;float:left; padding-left:10px " src="/PortfolioSite/banner.png">
+ <img style= "border-top-right-radius: 25px; border-top-left-radius: 25px;float:left; padding-left:10px " src="https://github.com/farhatghani/PortfolioSite/blob/master-branch/banner.PNG">
  <br>
  <br>
  <br>
