--- a/contactInfo.html
+++ b/contactInfo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="/PortfolioSite/contactInfo.css">
-<link rel="icon" type="image/x-icon" href="./icon4.png">
+<link rel="icon" type="image/x-icon" href="./iconfour.png">
 </head>
 <body>
 <div class="header">
@@ -30,11 +30,11 @@
 			<div class="grid-container">
 				  <div>
 				  <br>
-				  <img style= "float:left; " src="./icon1.png">
+				  <img style= "float:left; " src="./iconone.png">
 				  <a style= "padding-left:15px;float:left" href="https://www.linkedin.com/in/farhat-ghani/">linkedin.com/in/farhat-ghani</a> <br>
-				  <img style= "float:left; " src="./icon2.png">
+				  <img style= "float:left; " src="./icontwo.png">
 				  <a style= "padding-left:15px;float:left" href="https://www.youtube.com/channel/UC8lE6NB9r3QGkbpdpiemy4A/videos">youtube.com/channel</a> <br>
-				  <img style= "float:left;" src="./icon3.png">
+				  <img style= "float:left;" src="./iconthree.png">
 				  <a style= "padding-left:15px;float:left" href="farhatghani1@hotmail.com">farhatghani1@hotmail.com</a><br>
 
 					</div>
