--- a/tutorials.html
+++ b/tutorials.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="/PortfolioSite/tutorials.css">
-<link rel="icon" type="image/x-icon" href="./icon4.png">
+<link rel="icon" type="image/x-icon" href="./iconfour.png">
 </head>
 <body>
 <div class="header">
