--- a/contactInfo.html
+++ b/contactInfo.html
@@ -20,7 +20,7 @@
     </p>
 
 </div>
-	<a style= "padding-left:15px" href="  <a href="/PortfolioSite/contactInfo.html">Contact info</a> <br>
+	<a style= "padding-left:15px" href="/PortfolioSite/contactInfo.html">Contact info</a> <br>
 	<br>
 </div>
 <br>
