updated image extension

--- a/contactInfo.html
+++ b/contactInfo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="/PortfolioSite/contactInfo.css">
-<link rel="icon" type="image/x-icon" href="./iconfour.png">
+<link rel="icon" type="image/x-icon" href="./iconfour.PNG">
 </head>
 <body>
 <div class="header">
@@ -11,7 +11,7 @@
   <a href="/PortfolioSite/contactInfo.html">Contact info</a>
   <a href="/PortfolioSite/index.html">Home</a>
 
- <img style= "border-top-right-radius: 25px; border-top-left-radius: 25px;float:left; padding-left:10px " src="./banner.png">
+ <img style= "border-top-right-radius: 25px; border-top-left-radius: 25px;float:left; padding-left:10px " src="./banner.PNG">
  <br>
  <br>
  <br>
@@ -30,11 +30,11 @@
 			<div class="grid-container">
 				  <div>
 				  <br>
-				  <img style= "float:left; " src="./iconone.png">
+				  <img style= "float:left; " src="./iconone.PNG">
 				  <a style= "padding-left:15px;float:left" href="https://www.linkedin.com/in/farhat-ghani/">linkedin.com/in/farhat-ghani</a> <br>
-				  <img style= "float:left; " src="./icontwo.png">
+				  <img style= "float:left; " src="./icontwo.PNG">
 				  <a style= "padding-left:15px;float:left" href="https://www.youtube.com/channel/UC8lE6NB9r3QGkbpdpiemy4A/videos">youtube.com/channel</a> <br>
-				  <img style= "float:left;" src="./iconthree.png">
+				  <img style= "float:left;" src="./iconthree.PNG">
 				  <a style= "padding-left:15px;float:left" href="farhatghani1@hotmail.com">farhatghani1@hotmail.com</a><br>
 
 					</div>
