--- a/tutorials.html
+++ b/tutorials.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="/PortfolioSite/tutorials.css">
-<link rel="icon" type="image/x-icon" href="./iconfour.png">
+<link rel="icon" type="image/x-icon" href="./iconfour.PNG">
 </head>
 <body>
 <div class="header">
@@ -11,7 +11,7 @@
   <a href="/PortfolioSite/contactInfo.html">Contact info</a>
   <a href="/PortfolioSite/index.html">Home</a>
 
- <img style= "border-top-right-radius: 25px; border-top-left-radius: 25px;float:left; padding-left:10px " src="./banner.png">
+ <img style= "border-top-right-radius: 25px; border-top-left-radius: 25px;float:left; padding-left:10px " src="./banner.PNG">
  <br>
  <br>
  <br>
