--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="/PortfolioSite/index.css">
-<link rel="icon" type="image/x-icon" href="./iconone.PNG">
+<link rel="icon" type="image/x-icon" href="./iconfour.PNG">
 </head>
 <body>
 <div class="header">
